<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivArtistProfile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toTopOf="@+id/etName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_gravity="center_horizontal"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/etArtist"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etArtist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Artist"
        android:inputType="textPersonName"
        android:layout_gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="@+id/etName"
        app:layout_constraintStart_toStartOf="@+id/etName"
        tools:layout_editor_absoluteY="430dp" />

    <EditText
        android:id="@+id/etYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Year"
        android:inputType="textPersonName"
        android:layout_gravity="center_horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btnSave"
        app:layout_constraintEnd_toEndOf="@+id/etArtist"
        app:layout_constraintStart_toStartOf="@+id/etArtist"
        app:layout_constraintTop_toBottomOf="@+id/etArtist" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save"
        android:layout_gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</LinearLayout>